--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f7f7f7;
+    background-color: #ff0000;
 }
 
 header {
     background-color: #333;
-    color: white;
+    color: rgb(81, 255, 0);
     padding: 20px;
     text-align: center;
 }
@@ -25,7 +25,7 @@ main {
 
 footer {
     background-color: #333;
-    color: white;
+    color: rgb(0, 225, 255);
     text-align: center;
     padding: 10px;
     margin-top: 30px;
